# encfscracker

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.ci  test_config.xml
.github/workflows/: ci.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/core_engine_20260510/: index.md  metadata.json
conductor/archive/cracker_orchestration_20260511/: index.md
conductor/archive/encfs_verification_20260511/: plan.md
conductor/archive/fragment_management_20260513/: index.md  metadata.json  plan.md  spec.md
conductor/archive/sled_integration_20260511/: plan.md  spec.md
coverage-report/html/: index.html
docker/: Dockerfile
examples/: benchmark_groups.rs  benchmark_sled.rs  benchmark_verification.rs  manual_verification.rs  reproduce_issue.rs  verify_phase1.rs  verify_sled_encryption.rs  verify_sled_persistence.rs  verify_sled_resume.rs  verify_sled_robustness.rs  verify_sled_setup.rs  verify_state_crypto.rs
scripts/: build-docker.sh  dev-setup.sh
src/: cli_utils.rs  lib.rs  main.rs
src/config/: mod.rs
src/crypto/: encfs_config.rs  mod.rs  state_encryption.rs
src/fragment_combination/: mod.rs  parallel.rs
src/orchestration/: mod.rs  parallel.rs  sequential.rs
src/state/: mod.rs  sled_db.rs
tests/: cli_fragment_test.rs  cli_prompt_test.rs  config_parsing_test.rs  crypto_decryption_test.rs  fragment_combination_test.rs  fragment_management_test.rs  group_combination_test.rs  integration_cracker_test.rs  integration_state_encryption_test.rs  integration_state_test.rs  magic_header_test.rs  parallel_combination_test.rs  sled_db_test.rs  state_encryption_test.rs
(+29 files in other folders)
