[package]
name = "work"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
quick-xml = "0.39.4"
serde = { version = "1.0.228", features = ["derive"] }
