[package]
name = "encfs_cracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.4.18", features = ["derive"] }
quick-xml = { version = "0.39.4", features = ["serialize"] }
rayon = "1.10.0"
serde = { version = "1.0.228", features = ["derive"] }
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
hmac = "0.12.1"
aes-gcm = "0.10.3"
