[package]
name = "encfs_cracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.4.18", features = ["derive"] }
quick-xml = { version = "0.39.4", features = ["serialize"] }
rayon = "1.10.0"
serde = { version = "1.0.228", features = ["derive"] }
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
hmac = "0.12.1"
aes = "0.8.4"
cfb-mode = "0.8.2"
aes-gcm = "0.10.3"
sled = "0.34.7"
once_cell = "1.19.0"
base64 = "0.22.1"
ctrlc = "3.5.2"
tempfile = "3.10.1"
sha1 = "0.10.6"
cbc = "0.1.2"
generic-array = "0.14.7"
digest = "0.10.7"
serde_json = "1.0.149"
argon2 = "0.5.3"
rand = "0.10.1"
rpassword = "7.5.2"

[dev-dependencies]
